realloc dla chinskiego zdania

--- a/laboratoria/chinski/Makefile
+++ b/laboratoria/chinski/Makefile
@@ -1,5 +1,11 @@
 CFLAGS=-D_GNU_SOURCE -Wall -lm -std=c99 -g
 
+chiny3: chiny3.o
+	$(CC) chiny3.o -o chiny3
+
+chiny3.o: chiny3.c
+	$(CC) $(CFLAGS) -c chiny3.c
+
 chiny2: chiny2.o
 	$(CC) chiny2.o -o chiny2
 
@@ -13,4 +19,4 @@ chiny.o: chiny.c
 	$(CC) $(CFLAGS) -c chiny.c
 
 clean:
-	rm -f *.o *~ chiny chiny2
+	rm -f *.o *~ chiny2 chiny3 chiny
